--- a/index.html
+++ b/index.html
@@ -33,7 +33,25 @@
           </div>
         </div>
       </nav>
-    
+    <section id="home" class="home container">
+        <div class="row d-flex align-items-center">
+            <div class="col-8">
+                <h3 class="fw-semibold">Hi! I am</h3>
+                <h1 class="fw-bold"> John Doe</h1>
+                <p>I am Software Engineer Software based in Indonesia</p>
+                <a class= "btn button" href="images/potrait.png" alt="Portrait" download>Resume</a>
+
+            </div>
+            <div class="col-4">
+                <img src="images/potrait.png" alt="Portrait">
+            </div>
+        </div>
+        <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
+            <a class="text-decoration-none text-dark" href="#about">More Info</a>
+            <img id="arrow" src="images/arrow.svg" alt="arrow icon">
+        </div>
+
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
