--- a/index.html
+++ b/index.html
@@ -52,7 +52,45 @@
         </div>
 
     </section>
+    <section id="about" class="about container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sint exercitationem, impedit, placeat, veritatis nesciunt molestias itaque neque culpa quos facilis similique cumque quis sunt incidunt ipsum libero atque voluptatum commodi. Rem in molestiae voluptatem praesentium, alias quo numquam commodi laudantium sed perferendis et repellat, corrupti qui id, maxime repellendus.
+        </p>
+        <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2021-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa quam odit minima, tenetur expedita numquam aliquam ullam provident dolor, non inventore reprehenderit esse iure ea vel aperiam omnis reiciendis est.</p>                
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2021-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa quam odit minima, tenetur expedita numquam aliquam ullam provident dolor, non inventore reprehenderit esse iure ea vel aperiam omnis reiciendis est.</p>                
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2021-Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa quam odit minima, tenetur expedita numquam aliquam ullam provident dolor, non inventore reprehenderit esse iure ea vel aperiam omnis reiciendis est.</p>                
+            </div>
 
+
+        </div>
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
