--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
         </div>
 
     </section>
+    <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempore, fuga alias id blanditiis odit assumenda dignissimos magnam quas perspiciatis velit cupiditate omnis ea, consequuntur voluptatem sequi provident illo ipsum repudiandae! Reiciendis odit possimus iusto doloremque dolores ducimus quae mollitia animi aspernatur totam beatae ad, nulla, fugit quibusdam aliquid eaque.</p>
+            </div>
+            <div class="col work-img">
+                <div id="work-1" class="work-img-item">
+                <img src="images/work-1.png" alt="work 1" id="work-1">
+                </div>
+                <div id="work-2" class="work-img-item">
+                    <img src="images/work-2.png" alt="work 2" id="work-2">
+                </div>
+                <div id="work-3" class="work-img-item">
+                </div>
+                <img src="images/work-3.png" alt="work 3" id="work-3">
+            </div>
+        </div>
+
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
