--- a/index.html
+++ b/index.html
@@ -111,6 +111,47 @@
 
 
     </section>
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi doloribus commodi quos nisi ipsam facere. Magni, eum. Dolores, harum esse minima illo quisquam recusandae magnam eius beatae fugit repudiandae ab architecto quidem, eum suscipit hic dolorem tempore culpa maxime rerum odio provident doloremque officiis iure. Nisi est corrupti harum?</p>
+                  <div class="row">
+                        <div class="col d-flex align-items-center">
+                            <img src="images/Facebook.svg" alt="facebook icon">
+                            <p>John Doe</p>
+                        </div>
+                        <div class="col d-flex align-items-center">
+                            <img src="images/Instagram.svg" alt="instagram icon">
+                            <p>john_doe</p>
+                        </div>
+                        <div class="col d-flex align-items-center">
+                            <img src="images/Twitter.svg" alt="twitter icon">
+                            <p>@john_doe</p>
+                        </div>
+                  </div>
+            </div>
+            <div class="col">
+                <form class="contact-form" onsubmit="onFormSubmit(event)">
+                    <div class="mb-3">
+                      <label for="inp_email" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="inp_email" placeholder="example@email.com">
+                      </div>
+                    <div class="mb-3">
+                      <label for="inp_subject" class="form-label">Subject</label>
+                      <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_message" class="form-label">Message</label>
+                        <input type="text" class="form-control" id="inp_message" placeholder="Your Message">
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">    
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    </secion>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
