--- a/index.html
+++ b/index.html
@@ -18,38 +18,38 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#work">Work</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
             </li>
             </ul>
           </div>
         </div>
       </nav>
     <section id="home" class="home container">
-        <div class="row d-flex align-items-center">
-            <div class="col-8">
+        <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
+            <div class="col-12 col-md-8">
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold"> John Doe</h1>
                 <p>I am Software Engineer Software based in Indonesia</p>
                 <a class= "btn button" href="images/potrait.png" alt="Portrait" download>Resume</a>
 
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4 justify-content-md-end justify-content-center">
                 <img src="images/potrait.png" alt="Portrait">
             </div>
         </div>
-        <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
-            <a class="text-decoration-none text-dark" href="#about">More Info</a>
+        <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
+            <div class="text-dark" >More Info</div>
             <img id="arrow" src="images/arrow.svg" alt="arrow icon">
-        </div>
+        </a>
 
     </section>
     <section id="about" class="about container">
@@ -96,7 +96,7 @@
             <div class="col">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempore, fuga alias id blanditiis odit assumenda dignissimos magnam quas perspiciatis velit cupiditate omnis ea, consequuntur voluptatem sequi provident illo ipsum repudiandae! Reiciendis odit possimus iusto doloremque dolores ducimus quae mollitia animi aspernatur totam beatae ad, nulla, fugit quibusdam aliquid eaque.</p>
             </div>
-            <div class="col work-img">
+            <div class="col-12 col-6 work-img">
                 <div id="work-1" class="work-img-item">
                 <img src="images/work-1.png" alt="work 1" id="work-1">
                 </div>
@@ -113,24 +113,24 @@
     </section>
     <section id="contact" class="contact container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+            <div class="col-12 col-lg-6">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi doloribus commodi quos nisi ipsam facere. Magni, eum. Dolores, harum esse minima illo quisquam recusandae magnam eius beatae fugit repudiandae ab architecto quidem, eum suscipit hic dolorem tempore culpa maxime rerum odio provident doloremque officiis iure. Nisi est corrupti harum?</p>
                   <div class="row">
                         <div class="col d-flex align-items-center">
-                            <img src="images/Facebook.svg" alt="facebook icon">
-                            <p>John Doe</p>
+                            <img class="w-25" src="images/Facebook.svg" alt="facebook icon">
+                            <p class="mb-0 ms-2">John Doe</p>
                         </div>
                         <div class="col d-flex align-items-center">
-                            <img src="images/Instagram.svg" alt="instagram icon">
-                            <p>john_doe</p>
+                            <img class="w-25" src="images/Instagram.svg" alt="instagram icon">
+                            <p class="mb-0 ms-2">john_doe</p>
                         </div>
                         <div class="col d-flex align-items-center">
-                            <img src="images/Twitter.svg" alt="twitter icon">
-                            <p>@john_doe</p>
+                            <img class="w-25" src="images/Twitter.svg" alt="twitter icon">
+                            <p class="mb-0 ms-2">@john_doe</p>
                         </div>
                   </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-lg-5">
                 <form class="contact-form" onsubmit="onFormSubmit(event)">
                     <div class="mb-3">
                       <label for="inp_email" class="form-label">Email address</label>
