--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     </section>
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+            <div class="col-12 col-md-5">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempore, fuga alias id blanditiis odit assumenda dignissimos magnam quas perspiciatis velit cupiditate omnis ea, consequuntur voluptatem sequi provident illo ipsum repudiandae! Reiciendis odit possimus iusto doloremque dolores ducimus quae mollitia animi aspernatur totam beatae ad, nulla, fugit quibusdam aliquid eaque.</p>
             </div>
-            <div class="col-12 col-6 work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                 <img src="images/work-1.png" alt="work 1" id="work-1">
                 </div>
